# slicer

./: .gitignore  CMakeLists.txt  Makefile  Makefile.Linux  Makefile.OSX  README.md
include/: GLSLShader.h  camera.h  defines.h  lines.h  mesh.h  netcdfIO.h  save_image.h  slicer.h  sphere.h  texture.h
include/colormaps/: arthurboyd1.h  artmap.h  artmap_starry_night.h  charlesdemuth1.h  claudemonet1.h  danflavin1.h  danflavin2.h  donaldjudd1.h  edwardhopper1.h  edwardhopper2.h  ellswothkelly1.h  franzkline1.h  georgebyrne1.h  georgebyrne2.h  gerhardrichter1.h  inferno.h  jacksonpollock1.h  jacksonpollock2.h  jacksonpollock3.h  jasperjohns1.h  jeffwall1.h  joanmiro1.h  johnolsen1.h  johnolsen2.h  leilajeffreys1.h  leilajeffreys2.h  magma.h  maxernst1.h  maxernst2.h  maxernst3.h  maxernst4.h  parula.h  pauldavies1.h  pauldavies2.h  pauldavies3.h  pauldavies4.h  pauldavies5.h  pauldavies6.h  pauldavies7.h  pauldavies8.h  (+15 more)
python/make_texture/: colormaps.py  mom4_eta.py  mom4_salt.py  mom4_salt_anom.py  mom4_temp.py  mom4_temp_anom.py  mom4_vel.py
src/: GLSLShader.cpp  camera.cpp  lines.cpp  main.cpp  mesh.cpp  netcdfIO.cpp  save_image.cpp  slicer.cpp  sphere.cpp  texture.cpp
